src/styles/global.scss
/* ... */
footer {
	bottom: 0;
	position: fixed;
	width: 100%;
	font-size: 0.7rem;
	align-items: center;
	text-transform: uppercase;
	display: flex;
	backdrop-filter: blur(5px);
	z-index: 5;

	& * > div {
		padding: 0.5rem 0;
	}

	@include breakpoint-range($from: mobile) {

		flex-direction: column;
		justify-content: center;
	}

	@include breakpoint-range($from: desktopSmall) {
		flex-direction: row;
		justify-content: space-between;
	}
}

section {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	margin-bottom: 3rem;

	@include breakpoint-range($from: mobile) {
		padding: 0 1rem;
	}

	@include breakpoint-range($from: tablet) {
		margin: 0 1rem;
		padding: 0 1.5rem;
	}

	@include breakpoint-range($from: desktopSmall) {
		padding: 0;
		margin: 0;
	}
}

p, q, li, small, caption, h1, h2, h3, h4, h5, h6, a {
	&::selection {
		color: var(--backgroundColor);
		background-color: var(--primary);
	}
}

hr {
	border-style: double;
	border-image-slice: 1;
	border-image-source: linear-gradient(to right,
			transparent,
			var(--hr-color) calc(50% - var(--hr-line-offset)),
			var(--hr-color) calc(50% + var(--hr-line-offset)),
			transparent);
}

.hr-hands {
	border: none;

	&::after {
		background: url(../assets/images/hr.svg) no-repeat top center;
		content: "";
		display: block;
		height: 80px;
		margin: 4rem auto;
		position: relative;
		top: -50px;
		border: 0;
	}
}

progress {

	height: 10px;
	margin: 0 1rem;
	border: var(--border);
	border-radius: var(--borderRadius);
	background: var(--backgroundColor);

	@include breakpoint-range($from: mobile) {
		display: none;
	}

	@include breakpoint-range($from: tablet) {
		display: inline-block;
		width: 25%;
	}

	&::-moz-progress-bar,
	&::-webkit-progress-bar {
		border-radius: 0 20px 20px 0;
		width: 0%;
		height: 100%;
		transition: width;
		transition-duration: 1s;
		transition-timing-function: cubic-bezier(.36, .55, .63, .48);
		background-color: var(--primary);
		background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23f0f8f3' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
	}
}

fieldset {
	border-radius: var(--buttonBorderRadius);
	padding: var(--paddingContainer);
	border: none;
	// border: 1px dotted var(--primary);
	backdrop-filter: blur(20px);

	& label {
		color: var(--primary);
		font-weight: 300;
	}

	& input[type="checkbox"] {
		height: 2rem;
		width: 2rem;
		color: --primary;
		border-radius: var(--buttonBorderRadius);
		-webkit-appearance: none;
		// background: none;
		border: 2px solid var(--primary);
		outline: 0;

		&:checked {
			box-shadow: none;
			background-color: var(--primary);
			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='28' viewBox='0 0 24 24'%3E %3Cpath d='M15.88 8.29L10 14.17l-1.88-1.88a.996.996 0 1 0-1.41 1.41l2.59 2.59c.39.39 1.02.39 1.41 0L17.3 9.7a.996.996 0 0 0 0-1.41c-.39-.39-1.03-.39-1.42 0z' fill='%23fff'/%3E %3C/svg%3E");
		}

		&:disabled {
			background-color: #CCD3D8;
			opacity: 0.84;
			cursor: not-allowed;
		}
	}
}

#blog {
	display: flex;
	justify-content: center;
	align-items: baseline;
	text-align: center;
	gap: 1.5rem;

	@include breakpoint-range($from: mobile) {
		& > div {
			width: 100%;
		}

		flex-direction: column;
	}

	@include breakpoint-range($from: desktopSmall) {
		& > div {
			width: 50%;
		}

		flex-direction: row;
	}
}

.container__wide__tall {
	width: 100%;
	height: 100%;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
	gap: 1rem;
}

.thirds {
	display: flex;
	justify-content: space-between;
	align-items: center;
	flex-wrap: wrap;
	gap: 1rem;
	padding: 1rem 0;
	width: 100%;

	@include breakpoint-range($from: mobile, $to: tablet) {
		flex-direction: column;
	}

	@include breakpoint-range($from: tablet, $to: desktopSmall) {
		flex-direction: row;
		align-content: flex-end;
	}
}

.frame {
	border-image-source: url(../../public/img/album/goldframe_horizantal.png);
	overflow: hidden;
	z-index: 10;

	@include breakpoint-range($from: mobile, $to: tablet) {
		border: none
	}

	@include breakpoint-range($from: tablet) {
		border-image-slice: 140;
		border-image-repeat: stretch;
		border-width: 70px;
		border-style: solid;
	}

	& img {
		object-fit: cover;
	}
}

.glassmorphic {
	//  background-color: rgba(255, 255, 255, .4);
	// padding: var(--paddingContainer);
	// box-shadow: var(--boxShadow);
	// border: 1px solid rgba(255, 255, 255, 0.23);
	border-radius: var(--borderRadius);

	@supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
		// background-color: rgba(255, 255, 255, .5);
		// -webkit-backdrop-filter: blur(20px);
		backdrop-filter: blur(20px);
	}

	@include breakpoint-range($from: mobile, $to: tablet) {
		backdrop-filter: none;
		background-color: var(--backgroundColor);
	}
}

.parallax {
	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	min-height: 100vh;

	@include breakpoint-range($from: mobile, $to: tablet) {
		background-attachment: scroll;
	}
}
/* ... */

